Fix button center align
Previously I got the button in the middle by
adjusting the left-hand margin to push the
button to the center. In the solution I saw
they used a more elegant solution: margin: 0 auto;
which automatically centers it, without any fiddling
with the margin values.

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -47,5 +47,5 @@ button {
   border: 1px solid #eee;
   display: block;
   padding: 8px 24px;
-  margin-left: 115px;
+  margin: 0 auto;
 }
